--- a/src/public/css/preview.css
+++ b/src/public/css/preview.css
@@ -1,6 +1,5 @@
 .preview-section {
-  max-width: 56rem;
-  margin: var(--space-11) auto;
+  width: 50rem;
   text-align: center;
 }
 
@@ -13,6 +12,6 @@
 
 #previewFrame {
   width: 100%;
-  height: 25rem;
+  height: 30rem;
   border: 1px solid var(--border-preview);
 }
